--- a/mnist_model.ipynb
+++ b/mnist_model.ipynb
@@ -220,7 +220,7 @@
     "and print out the CNNs prediction\n",
     "\"\"\"\n",
     "# get the image and turn it into gray scale\n",
-    "img_path = \"handwritting/image0.png\"  # image path here\n",
+    "img_path = \"handwriting/image0.png\"  # image path here\n",
     "img = cv2.imread(img_path, cv2.IMREAD_GRAYSCALE)\n",
     "img = cv2.resize(img, (28,28))\n",
     "\n",
